<resources>
    <string name="app_name">林记</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="company_code">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="confirmOrder">确认订单</string>
    <string name="payment">付款</string>
    <string name="userprofile">用户资料</string>
    <string name="orderslip">订单表</string>
    <string name="quickreorder">快速下单</string>
    <string name="currentorders">当前订单</string>
    <string name="orderhistory">订单历史</string>
    <string name="logout">登出</string>
    <string name="payment_unsuccessful">未下单，付款失败！</string>
    <string name="payment_successful">付款成功！</string>
    <string name="payment_unsuccessful_description">您的卡不会被收费\n请重试</string>
    <string name="payment_successful_description"> 已从您的卡里扣除</string>
    <string name="backTo">返回</string>
    <string name="wallet">钱包</string>
    <string name="lbl_walletAmt">数目</string>
    <string name="lblwallet_autodeduct">将自动在付款扣钱</string>
    <string name="lbl_paid_amt">已缴付金额</string>
    <string name="lbl_walletDeducted_amt">钱包扣钱</string>
    <string name="lbl_orderDetails">订单详情</string>
    <string name="lbl_order_details"> 订单详情</string>
    <string name="lbl_product_details"> 订单样品</string>
    <string name="lbl_numItemsHeader">数量</string>
    <string name="lbl_orderID">订单号</string>
    <string name="lbl_orderDate">订单日期</string>
    <string name="lbl_companyName">公司名字</string>
    <string name="lbl_contactNo">联络号码</string>
    <string name="status">状态</string>
    <string name="pendingStatus">待送货</string>
    <string name="deliveredStatus">已送货</string>
    <string name="cancelledStatus">取消</string>
    <string name="lbl_productDetails">物品详情</string>
    <string name="lbl_paperBag">纸袋</string>
    <string name="paperBagRequired">需要</string>
    <string name="subtotal">小计</string>
    <string name="tax">7% 税</string>
    <string name="totalAmount">总额</string>
    <string name="totalPayableAmount">待缴付金额</string>
    <string name="deliveryDetails"> 送货详情</string>
    <string name="lbl_deliveryDate"> 送货日期</string>
    <string name="date">日/月/年</string>
    <string name="amountDetails"> 价钱详情</string>
    <string name="save_this_card">保存此卡</string>
    <string name="pay_with_saved_cards">使用已储存的卡支付</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="key_in_cvc">请输入您的CVC号码：</string>
    <string name="cvc_error">CVC错误</string>
    <string name="no_saved_card">没有储存的卡</string>
    <string name="delete_card">删除此卡</string>
    <string name="select_card">选择您要使用的卡</string>
    <string name="confirm_delete">您确定删除此尾号的卡吗： </string>
    <string name="invalid_card">卡信息错误</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="paymentdetails">付款详情</string>
    <string name="pay">付款</string>
    <string name="confirmPlaceOrder">下单</string>
    <string name="btn_PlaceOrder">下单</string>
    <string name="dashboard">仪表板</string>
    <string name="scan">扫描卡片</string>
</resources>