<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" android:layout_height="100dp"
    android:layout_width="50dp">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userprofile"
            android:title="@string/userprofile"
            android:icon="@drawable/user_profile" />

        <item
            android:id="@+id/nav_catalogue"
            android:title="@string/orderslip"
            android:icon="@drawable/order_slip" />

        <item
            android:id="@+id/nav_quickreorder"
            android:title="@string/quickreorder"
            android:icon="@drawable/quickorder" />

        <item
            android:id="@+id/nav_currentorder"
            android:title="@string/currentorders"
            android:icon="@drawable/currentorder" />

        <item
            android:id="@+id/nav_orderhistory"
            android:title="@string/orderhistory"
            android:icon="@drawable/order_history" />

        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/dashboard" />

        <item
            android:id="@+id/nav_wallet"
            android:title="@string/wallet"
            android:icon="@drawable/wallet" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout" />
    </group>
</menu>
